# medical-automl

./: .gitignore  BASELINE_GUIDE.md  LICENSE  README.md  baseline_comparison_5fold.json  baseline_comparison_results.json  download_data.py  evaluate_calibration.py  external_validation.py  external_validation_results.json  index.html  patients.csv  plot_attention.py  plot_roc.py  plot_trajectory.py  prepare.py  prepare_kfold.py  program.md  pyproject.toml  results.tsv  results_clinical.tsv  results_kfold_5.json  run_baseline.py  run_baseline_sota.py  statistical_tests.py  statistical_tests_results.json  statistical_tests_table.tex  test_kaggle_data.py  train.py  train_kfold.py  visualize_baselines.py  visualize_baselines_5fold.py
data/: kfold_5_info.txt  tokenizer.pkl
data_english/: tokenizer_en.pkl
docs/: KFOLD_GUIDE.md  STATISTICAL_TESTS_GUIDE.md  declaration_of_interest.docx  declaration_of_interest.md  ethics_statement.docx  ethics_statement.md  highlights.docx  highlights_aim.md  osf_preprint_metadata.md  osf_submission_checklist.md
results/: experiment_A_results.json  experiment_B_results.json  experiment_ollama_results.json  experiment_shotcurve_results.json  external_validation_results.json  results_kfold_5.json  statistical_summary_report.csv  statistical_tests_llm.json  statistical_tests_llm.tex  statistical_tests_results.json  statistical_tests_table.tex
scripts/: experiment_A.py  experiment_B.py  experiment_ollama.py  experiment_shotcurve.py  external_validation.py  figure1.py  generate_baseline.py  generate_paper_figures.py  plot_ablation.py  (+12 more)
(+8 files in other folders)
