[project]
name = "medical-automl"
version = "0.1.0"
description = "Autonomous LLM-powered medical research and diagnosis optimization"
authors = [
    {name = "Zhanbingli", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["medical", "automl", "transformer", "cardiovascular", "diagnosis", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
    "torch==2.6.0",
    "xgboost>=3.2.0",
]


